--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demo",
   "version": "0.0.0",
   "scripts": {
+    "storybook": "start-storybook -p 9001 -c .storybook",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -20,6 +21,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@storybook/addon-actions": "^4.0.4",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
@@ -29,9 +31,12 @@
     "@angular/cli": "~7.0.4",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
+    "@babel/core": "^7.1.2",
+    "@storybook/angular": "^4.0.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "babel-loader": "^8.0.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
