--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -3,10 +3,11 @@
     "exclude": [
       "../src/test.ts",
       "../src/**/*.spec.ts",
-      "../projects/**/*.spec.ts"
+      "../projects/**/*.spec.ts",
+      "**/*.stories.ts"
     ],
     "include": [
       "../src/**/*",
       "../projects/**/*"
-    ]
+    ],
   }
