--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "storybook": "start-storybook -p 9001 -c .storybook",
+    "build-storybook": "build-storybook -c .storybook -o .out",
+    "deploy-storybook": "storybook-to-ghpages",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -33,9 +35,10 @@
     "@angular/language-service": "~7.0.0",
     "@babel/core": "^7.1.2",
     "@storybook/angular": "^4.0.4",
+    "@storybook/storybook-deployer": "^2.3.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "babel-loader": "^8.0.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
