--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build-storybook": "build-storybook -c .storybook -o .out",
     "deploy-storybook": "storybook-to-ghpages",
     "ng": "ng",
-    "start": "ng serve --port 4300",
+    "start": "ng serve --port 9000",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,7 +26,7 @@
     "@angular/router": "~7.0.0",
     "@storybook/addon-actions": "^4.0.4",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
